frincoe-macros/tests/make_client/not_found.rs
use frincoe_macros::make_client;

make_client!(impl "interfaces.rs"::NotExisted for Target in test);

fn main() {}
